re-implemented missing word-wrap in 0029-WebUI-Fix-Variable-selection-and-filter for SysVarsTblPopup and adapted colgroup accordingly (fixes #3032).

--- a/buildroot-external/patches/occu/0029-WebUI-Fix-Variable-selection-and-filter/occu/WebUI/www/webui/style.css
+++ b/buildroot-external/patches/occu/0029-WebUI-Fix-Variable-selection-and-filter/occu/WebUI/www/webui/style.css
@@ -1146,6 +1146,7 @@ a img {
   height:60px;
   text-align:center;
   cursor:pointer;
+  word-break: break-word;
 }
 .SysVarsTblPopup_Highlight{
   background-color:$_(inactiveBackground);
@@ -1153,6 +1154,7 @@ a img {
   height:60px;
   text-align:center;
   cursor:pointer;
+  word-break: break-word;
 }
 .WhiteBkgChannelPopup {
   background-color: $_(white); /* white */
